[project]
name = "ai-claim-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.13.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.25.0",
    "langchain>=1.3.4",
    "faiss-cpu>=1.14.2",
    "sentence-transformers>=5.5.1",
]
